--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'GV'
 - !lcsh 'Physical education and training'
+- GITenberg
 title: How to Get Strong and How to Stay So
 url: http://www.gutenberg.org/ebooks/36557
